tests/cli/snapshots/cli__check__deeply_nested_key_paths.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - missing
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Form.validation.errors.email.invalid"  [missing-key]
  --> ./src/app.tsx:4:18
  |
4 |     return <div>{t("validation.errors.email.invalid")}</div>;
  |                  ^


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
