tests/cli/snapshots/cli__check__exit_code_on_errors.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - hardcoded
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Hardcoded"  [hardcoded]
  --> ./src/app.tsx:1:6
  |
1 | <div>Hardcoded</div>
  |      ^


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
