tests/cli/snapshots/cli__check__missing_key_static_and_dynamic_combined.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
warning: "Tools.create"  [unused-key]
  --> ./messages/en.json:3:1
   = note: ("Create")

error: "Tools.delete"  [missing-key]
  --> ./src/app.tsx:4:17
   |
 4 | const missing = t("delete");
   |                 ^

error: "Tools.archive"  [missing-key]
  --> ./src/app.tsx:13:12
   |
13 |     return t(key);
   |            ^

error: "Tools.update"  [missing-key]
  --> ./src/app.tsx:13:12
   |
13 |     return t(key);
   |            ^


✘ 4 problems (3 errors, 1 warning)

----- stderr -----
