tests/cli/snapshots/cli__check__mixed_issues_across_rules.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Common.key1"  [untranslated]
  --> ./messages/en.json:1:1
  = note: ("Value 1") identical in: zh
  = used: ./src/app.tsx:7:22

warning: "Common.unused"  [unused-key]
  --> ./messages/en.json:1:1
  = note: ("Unused")

error: "Common.unused"  [replica-lag]
  --> ./messages/en.json:1:1
  = note: ("Unused") missing in: zh
  = used: (no usages found)

warning: "Common.orphan"  [orphan-key]
  --> ./messages/zh.json:1:1
  = note: in zh ("孤儿")

error: "Hardcoded Text"  [hardcoded]
  --> ./src/app.tsx:6:19
  |
6 |             <span>Hardcoded Text</span>
  |                   ^

error: "Common.missing"  [missing-key]
  --> ./src/app.tsx:8:22
  |
8 |             <button>{t("missing")}</button>
  |                      ^


✘ 6 problems (4 errors, 2 warnings)

----- stderr -----
