tests/cli/snapshots/cli__check__react_i18next_hardcoded_text.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - hardcoded
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Welcome to our app"  [hardcoded]
  --> ./src/components/app.tsx:8:17
  |
8 |             <h1>Welcome to our app</h1>
  |                 ^


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
