tests/cli/snapshots/cli__check__react_i18next_missing_key.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - missing
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "description"  [missing-key]
  --> ./src/components/app.tsx:9:17
  |
9 |             <p>{t('description')}</p>
  |                 ^


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
